[gd_scene load_steps=4 format=2]

[ext_resource path="res://Screens/BaseScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/GameSelectScreen.gd" type="Script" id=2]
[ext_resource path="res://Screens/PlayerContainer.tscn" type="PackedScene" id=3]

[node name="GameSelectScreen" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 17.0
margin_top = 21.0
margin_right = 495.0
margin_bottom = 266.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 25

[node name="Title" parent="MarginContainer/VBoxContainer" index="0"]
margin_left = 163.0
margin_right = 314.0
size_flags_horizontal = 4
text = "Select Players"

[node name="PlayerContainers" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]
margin_top = 37.0
margin_right = 478.0
margin_bottom = 195.0
custom_constants/separation = 30

[node name="Container1" parent="MarginContainer/VBoxContainer/PlayerContainers" index="0" instance=ExtResource( 3 )]
margin_right = 97.0
margin_bottom = 158.0
player_index = 1

[node name="Container2" parent="MarginContainer/VBoxContainer/PlayerContainers" index="1" instance=ExtResource( 3 )]
margin_left = 127.0
margin_right = 224.0
margin_bottom = 158.0
player_index = 2
player_type = 1

[node name="Container3" parent="MarginContainer/VBoxContainer/PlayerContainers" index="2" instance=ExtResource( 3 )]
margin_left = 254.0
margin_right = 351.0
margin_bottom = 158.0
player_index = 3
player_type = 2

[node name="Container4" parent="MarginContainer/VBoxContainer/PlayerContainers" index="3" instance=ExtResource( 3 )]
margin_left = 381.0
margin_right = 478.0
margin_bottom = 158.0
player_index = 4
player_type = 2

[node name="Buttons" parent="MarginContainer/VBoxContainer" index="2"]
margin_left = 175.0
margin_top = 220.0
margin_right = 302.0
margin_bottom = 245.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons" index="0"]
margin_right = 127.0
margin_bottom = 25.0
custom_constants/separation = 15

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Buttons/HBoxContainer" index="0"]
margin_right = 56.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
text = "Back"

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/Buttons/HBoxContainer" index="1"]
margin_left = 71.0
margin_right = 127.0
margin_bottom = 25.0
text = "Play"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/HBoxContainer/Play" to="." method="_on_Play_pressed"]

[editable path="MarginContainer/VBoxContainer/PlayerContainers/Container1"]

[editable path="MarginContainer/VBoxContainer/PlayerContainers/Container2"]

[editable path="MarginContainer/VBoxContainer/PlayerContainers/Container3"]

[editable path="MarginContainer/VBoxContainer/PlayerContainers/Container4"]
